Rag chatbot langchain (#107)
* update rag notebook

* updates

* updates to example

* typos

* tweaking prompt and using RecursiveTextSplitter

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 61,
       "metadata": {
         "id": "a-t1mglib54F"
       },
@@ -105,7 +105,7 @@
       "source": [
         "## Indexing Data into Elasticsearch\n",
         "\n",
-        "Let's download the sample dataset and deserialize the document."
+        "Let's download the sample dataset and deserialize the document. "
       ]
     },
     {
@@ -117,7 +117,6 @@
       "outputs": [],
       "source": [
         "from urllib.request import urlopen\n",
-        "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain.llms import OpenAI\n",
         "import json\n",
         "\n",
@@ -148,22 +147,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 40,
       "metadata": {
         "id": "dbHEoTF6vBXE"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Created a chunk of size 866, which is longer than the specified 800\n",
-            "Created a chunk of size 1120, which is longer than the specified 800\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from langchain.document_loaders import JSONLoader \n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
         "\n",
         "def metadata_func(record: dict, metadata: dict) -> dict:\n",
         "    metadata[\"name\"] = record.get(\"name\")\n",
@@ -177,13 +168,13 @@
         "# For more loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/\n",
         "# And 3rd party loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/#third-party-loaders\n",
         "loader = JSONLoader(\n",
-        "        file_path=\"temp.json\",\n",
-        "        jq_schema=\".[]\",\n",
-        "        content_key=\"content\",\n",
-        "        metadata_func=metadata_func,\n",
-        "    )\n",
+        "    file_path=\"temp.json\",\n",
+        "    jq_schema=\".[]\",\n",
+        "    content_key=\"content\",\n",
+        "    metadata_func=metadata_func,\n",
+        ")\n",
         "\n",
-        "text_splitter = CharacterTextSplitter(chunk_size=800, chunk_overlap=400)\n",
+        "text_splitter = RecursiveCharacterTextSplitter(chunk_size=600, chunk_overlap=200)\n",
         "docs = loader.load_and_split(text_splitter=text_splitter)"
       ]
     },
@@ -203,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,7 +236,7 @@
           "text": [
             "---- Answer ----\n",
             "\n",
-            "The North America South America (NASA) sales team is led by two Area Vice-Presidents: Laura Martinez, the Area Vice-President of North America, and Gary Johnson, the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff.\n"
+            "The NASA Sales Team is the regional sales team that covers the North America and South America region. It is led by two Area Vice-Presidents, Laura Martinez (for North America) and Gary Johnson (for South America). The team consists of dedicated account managers, sales representatives, and support staff who are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The team also collaborates with other departments, such as marketing, product development, and customer support to ensure the delivery of high-quality products and services to clients.\n"
           ]
         }
       ],
@@ -259,10 +250,11 @@
         "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
-        "    \"\"\"Answer the question based only on the following context:\n",
-        "    {context}\n",
-        "\n",
-        "    Question: {question}\n",
+        "    \"\"\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Be as verbose and educational in your response as possible. \n",
+        "    \n",
+        "    context: {context}\n",
+        "    Question: \"{question}\"\n",
+        "    Answer:\n",
         "    \"\"\"\n",
         ")\n",
         "\n",
@@ -291,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
@@ -299,9 +291,9 @@
           "output_type": "stream",
           "text": [
             "---- Answer ----\n",
+            "The NASA sales team is the North America South America (NASA) region of the company's sales organization. This region includes the United States, Canada, Mexico, as well as Central and South America. The NASA sales team is composed of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. The team's role is to identify and pursue new business opportunities, nurture existing client relationships, and ensure customer satisfaction. They collaborate closely with other departments, such as marketing, product development, and customer support, to ensure the company consistently delivers high-quality products and services to their clients.\n",
             "\n",
-            "Answer: The North America South America (NASA) sales team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. \n",
-            "Source: Sales Organization Overview\n"
+            "SOURCE: Sales Organization Overview\n"
           ]
         }
       ],
@@ -313,18 +305,17 @@
         "\n",
         "retriever = vector_store.as_retriever()\n",
         "\n",
-        "llm = OpenAI(openai_api_key=OPENAI_API_KEY, verbose=True)\n",
+        "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
-        "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
+        "You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Be as verbose and educational in your response as possible. \n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer, on a new line, with a prefix of \"SOURCE:\".\n",
         "\n",
-        "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
         "\n",
-        "{context}\n",
-        "\n",
-        "Question: {question}\n",
+        "context: {context}\n",
+        "Question: \"{question}\"\n",
+        "Answer:\n",
         "\"\"\"\n",
         ")\n",
         "\n",
@@ -342,7 +333,7 @@
         "    return document_separator.join(doc_strings)\n",
         "\n",
         "_context = {\n",
-        "    \"context\": RunnablePassthrough() | retriever | _combine_documents,\n",
+        "    \"context\":  retriever | _combine_documents,\n",
         "    \"question\": RunnablePassthrough(),\n",
         "}\n",
         "\n",
@@ -370,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -378,10 +369,9 @@
           "output_type": "stream",
           "text": [
             "---- Answer ----\n",
+            "The NASA Sales Team is the sales team in charge of the North America South America region (NASA) which consists of the United States, Canada, Mexico, as well as Central and South America. The team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. The team is responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. They collaborate closely with other departments, such as marketing, product development, and customer support, to ensure the company delivers high-quality products and services to their clients. \n",
             "\n",
-            "The NASA sales team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. They collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
-            "\n",
-            "Source: Sales Organization Overview\n",
+            "SOURCE: Sales Organization Overview\n",
             "\n",
             "---- Documents ----\n",
             "Sales Organization Overview\n",
@@ -390,15 +380,14 @@
             "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
             "----\n",
             "Sales Organization Overview\n",
-            "Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
-            "\n",
-            "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
-            "----\n",
-            "Sales Organization Overview\n",
             "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
             "----\n",
-            "Sales Organization Overview\n",
-            "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
+            "Sales Engineering Collaboration\n",
+            "Title: Working with the Sales Team as an Engineer in a Tech Company\n",
+            "----\n",
+            "Sales Engineering Collaboration\n",
+            "Understanding the Sales Team's Role:\n",
+            "The sales team is responsible for promoting and selling the company's products and services to potential clients. Their role involves establishing relationships with customers, understanding their needs, and ensuring that the offered solutions align with their requirements.\n",
             "----\n"
           ]
         }
@@ -415,14 +404,12 @@
         "\n",
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
-        "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
+        "You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Be as verbose and educational in your response as possible. \n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer, on a new line, with a prefix of \"SOURCE:\".\n",
         "\n",
-        "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
-        "\n",
-        "{context}\n",
-        "\n",
+        "context: {context}\n",
         "Question: {question}\n",
+        "Answer:\n",
         "\n",
         "\"\"\"\n",
         ")\n",
@@ -483,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -491,9 +478,8 @@
           "output_type": "stream",
           "text": [
             "---- Answer ----\n",
-            "\n",
-            "Answer: The objectives for Fiscal Year 2024 are to increase revenue by 20% compared to fiscal year 2023, expand market share in key segments by 15%, retain 95% of existing customers and increase customer satisfaction ratings, and launch at least two new products or services in high-demand market segments.\n",
-            "Source: Fy2024 Company Sales Strategy\n"
+            "The objectives for Fiscal Year 2024 are to increase revenue by 20% compared to Fiscal Year 2023, expand market share in key segments by 15%, retain 95% of existing customers and increase customer satisfaction ratings, and launch at least two new products or services in high-demand market segments. \n",
+            "SOURCE: Fy2024 Company Sales Strategy - I. Objectives for Fiscal Year 2024\n"
           ]
         }
       ],
@@ -509,14 +495,14 @@
         "\n",
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
-        "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
+        "You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Be as verbose and educational in your response as possible. \n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer, on a new line, with a prefix of \"SOURCE:\".\n",
         "\n",
-        "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
-        "\n",
+        "context: \n",
         "{context}\n",
         "\n",
         "Question: {question}\n",
+        "Answer:\n",
         "\"\"\"\n",
         ")\n",
         "\n",
