--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -357,12 +357,7 @@
     "  mappings={\n",
     "    \"properties\": {\n",
     "      \"plot\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "        \"type\": \"text\",\n"
     "        }\n",
     "      },\n",
     "      \"plot_embedding\": { \n",
